# HueClientRest

./: .gitignore  README.md  pyproject.toml
src/hueclientrest/: __init__.py  core.py
tests/: testhueclient.py
