[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hueclientrest"
version = "0.1.3"
authors = [
    {name = "Ramon LOPEZ", email = "ramon.lopez@outlook.fr"},
]
description = "A Python REST client for interacting with Hadoop Hue's REST API"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["hue", "hadoop",  "package", "python"]
dependencies = [
    "requests>=2.32.3",
    "urllib3>=2.3.0"
]   


[project.optional-dependencies]
dev = [
    "twine"
]
docs = []

[project.urls]
Homepage = "https://github.com/SpanishST/HueClientRest"
Repository = "https://github.com/SpanishST/HueClientRest"
Documentation = "https://github.com/SpanishST/HueClientRest"
"Bug Reports" = "https://github.com/SpanishST/HueClientRest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"